--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ metadata: w2w_metadata
 #
 organization-name: "Institute for European Studies, Indiana University"
 organization-link: https://euro.indiana.edu/
-organization-logo-banner: assets/img/hamiltonlugar_lockup_WEB_h6.png
+organization-logo-banner: https://assets.iu.edu/brand/3.3.x/iu-sig-formal.svg
 # organization-logo-nav: https://cdil.lib.uidaho.edu/assets/img/logo.png
 
 ##########
