--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ metadata: w2w_metadata
 #
 organization-name: "Institute for European Studies, Indiana University"
 organization-link: https://euro.indiana.edu/
-organization-logo-banner: https://assets.iu.edu/brand/3.3.x/iu-sig-formal.svg
-organization-logo-nav: https://assets.iu.edu/brand/3.3.x/iu-sig-formal.svg
+organization-logo-banner: https://assets.iu.edu/brand/3.3.x/trident-large.png
+organization-logo-nav: https://assets.iu.edu/brand/3.3.x/trident-large.png
 
 ##########
 # ROBOTS EXCLUDE
