--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ metadata: w2w_metadata
 #   Uncomment these and enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
 #
 organization-name: "Institute for European Studies, Indiana University"
-organization-link: https://euro.indiana.edu/
-organization-logo-banner: https://assets.iu.edu/brand/3.3.x/trident-large.png
-organization-logo-nav: https://assets.iu.edu/brand/3.3.x/trident-large.png
+organization-link: https://assets.iu.edu/
+organization-logo-banner: https://assets.iu.edu/brand/3.3.x/brand.css 
+# organization-logo-nav: 
 
 ##########
 # ROBOTS EXCLUDE
